--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -28,6 +28,7 @@ jobs:
         uses: aardsoft/ci-actions/kiwi-build@master
         with:
           image-directory: tumbleweed-base
+          kiwi-debug: true
           repository: https://mirror.aardsoft.fi/opensuse///tumbleweed/repo/oss
           extra-repositories: |
             https://mirror.aardsoft.fi/opensuse/tumbleweed/repo/non-oss
@@ -70,6 +71,15 @@ jobs:
           username: ${{github.actor}}
           password: ${{secrets.GITHUB_TOKEN}}
 
+      - name: Build tex image
+        uses: aardsoft/ci-actions/kiwi-build@master
+        with:
+          image-directory: tex
+          repository: https://mirror.aardsoft.fi/opensuse/tumbleweed/repo/oss
+          kiwi-debug: true
+          extra-repositories: |
+            https://mirror.aardsoft.fi/opensuse/tumbleweed/repo/non-oss
+
       - name: Build tw dev image
         uses: aardsoft/ci-actions/kiwi-build@master
         with:
@@ -103,6 +113,7 @@ jobs:
       - name: Build firefox image
         uses: aardsoft/ci-actions/kiwi-build@master
         with:
+          kiwi-debug: true
           image-directory: wayland/firefox
           repository: https://mirror.aardsoft.fi/opensuse/tumbleweed/repo/oss
           extra-repositories: |
@@ -143,3 +154,26 @@ jobs:
             http://dl.google.com/linux/chrome/rpm/stable/x86_64
             https://mirror.aardsoft.fi/opensuse/tumbleweed/repo/non-oss
             https://ftp.gwdg.de/pub/linux/misc/packman/suse/openSUSE_Tumbleweed/
+
+      - name: Build google-chrome image
+        uses: aardsoft/ci-actions/kiwi-build@master
+        with:
+          image-directory: wayland/google-chrome
+          repository: https://mirror.aardsoft.fi/opensuse/tumbleweed/repo/oss
+          extra-repositories: |
+            http://dl.google.com/linux/chrome/rpm/stable/x86_64
+            https://mirror.aardsoft.fi/opensuse/tumbleweed/repo/non-oss
+            https://ftp.gwdg.de/pub/linux/misc/packman/suse/openSUSE_Tumbleweed/
+
+      - name: Build hyprland image
+        uses: aardsoft/ci-actions/kiwi-build@master
+        with:
+          image-directory: wayland/hyprland
+          repository: https://mirror.aardsoft.fi/opensuse/tumbleweed/repo/oss
+          extra-repositories: |
+            http://dl.google.com/linux/chrome/rpm/stable/x86_64
+            https://mirror.aardsoft.fi/opensuse/tumbleweed/repo/non-oss
+            https://ftp.gwdg.de/pub/linux/misc/packman/suse/openSUSE_Tumbleweed/
+            https://download.opensuse.org/repositories/home:/bhwachter:/desktop/openSUSE_Tumbleweed?ssl_verify=yes
+            https://download.opensuse.org/repositories/home:/bhwachter/openSUSE_Tumbleweed?ssl_verify=yes
+            https://download.opensuse.org/repositories//X11:/Wayland/openSUSE_Tumbleweed?ssl_verify=yes
