--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -177,3 +177,13 @@ jobs:
             https://download.opensuse.org/repositories/home:/bhwachter:/desktop/openSUSE_Tumbleweed?ssl_verify=yes
             https://download.opensuse.org/repositories/home:/bhwachter/openSUSE_Tumbleweed?ssl_verify=yes
             https://download.opensuse.org/repositories//X11:/Wayland/openSUSE_Tumbleweed?ssl_verify=yes
+
+      - name: Build nyxt image
+        uses: aardsoft/ci-actions/kiwi-build@master
+        with:
+          kiwi-debug: true
+          image-directory: wayland/nyxt
+          repository: https://mirror.aardsoft.fi/opensuse/tumbleweed/repo/oss
+          extra-repositories: |
+            https://mirror.aardsoft.fi/opensuse/tumbleweed/repo/non-oss
+            https://ftp.gwdg.de/pub/linux/misc/packman/suse/openSUSE_Tumbleweed/
