--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -165,6 +165,16 @@ jobs:
             https://mirror.aardsoft.fi/opensuse/tumbleweed/repo/non-oss
             https://ftp.gwdg.de/pub/linux/misc/packman/suse/openSUSE_Tumbleweed/
 
+      - name: Build kodi image
+        uses: aardsoft/ci-actions/kiwi-build@master
+        with:
+          image-directory: wayland/kodi
+          repository: https://mirror.aardsoft.fi/opensuse/tumbleweed/repo/oss
+          extra-repositories: |
+            http://dl.google.com/linux/chrome/rpm/stable/x86_64
+            https://mirror.aardsoft.fi/opensuse/tumbleweed/repo/non-oss
+            https://ftp.gwdg.de/pub/linux/misc/packman/suse/openSUSE_Tumbleweed/
+
       - name: Build hyprland image
         uses: aardsoft/ci-actions/kiwi-build@master
         with:
